18/10/2023 - Carlos - Primera version fragmento pilotos (hay un error)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">NanoFormula</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="posicion">Posicion</string>
+    <string name="nombrePiloto">Nombre Piloto</string>
+    <string name="nombreEquipo">Nombre Equipo</string>
+    <string name="puntosPiloto">Puntos Piloto</string>
 </resources>
