18/10/2023 - Carlos - Introducida foto circular para los pilotos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="nombrePiloto">Nombre Piloto</string>
     <string name="nombreEquipo">Nombre Equipo</string>
     <string name="puntosPiloto">Puntos Piloto</string>
+    <string name="fotoPiloto">Foto Piloto</string>
 </resources>
