18/10/2023 - Carlos - Introducida toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="nombreEquipo">Nombre Equipo</string>
     <string name="puntosPiloto">Puntos Piloto</string>
     <string name="fotoPiloto">Foto Piloto</string>
+    <string name="toolbar">ToolBar</string>
 </resources>
