--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="nombreCiudad">Ciudad - Pais</string>
     <string name="fechaCarrera">dd-mm-yy</string>
     <string name="nombreLocalizacion">Nombre Localizacion</string>
+    <string name="nombre_piloto">Nombre del Piloto</string>
+    <string name="nacionalidad_piloto">Nacionalidad del Piloto</string>
+    <string name="numero_piloto">NÚMERO</string>
+    <string name="codigo_piloto">CÓDIGO</string>
+    <string name="edad_piloto">EDAD</string>
 </resources>
