--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,5 @@
     <string name="nombreEscuderiaCarrera">ESCUDERIA</string>
     <string name="puntosCarreraPiloto">PTS</string>
     <string name="carrera_no_disponible">Los resultados de la carrera estarán disponibles el día posterior al que haya finalizado.</string>
+    <string name="numeroEquipos">NUM.\nEQUIPOS</string>
 </resources>
