11/11/2023 - Carlos - Agregado fragment para los datos por temporada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,6 @@
     <string name="puntosCarreraPiloto">PTS</string>
     <string name="carrera_no_disponible">Los resultados de la carrera estarán disponibles el día posterior al que haya finalizado.</string>
     <string name="numeroEquipos">NUM.\nEQUIPOS</string>
+    <string name="posicionPiloto">POS</string>
+    <string name="pilotoEscudería">ESCUDERIA</string>
 </resources>
