--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,5 @@
     <string name="posicionPiloto">POS</string>
     <string name="pilotoEscudería">ESCUDERIA</string>
     <string name="graficoPuntosTemp">GRÁFICO PUNTOS POR CARRERA</string>
+    <string name="graficoPosSalidaFin">POSICIÓN SALIDA VS FINAL</string>
 </resources>
