--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,4 +152,6 @@
     <string name="pilotoEscudería">ESCUDERIA</string>
     <string name="graficoPuntosTemp">PUNTOS POR CARRERA</string>
     <string name="graficoPosSalidaFin">POSICIÓN SALIDA VS FINAL</string>
+    <string name="CalendarioGP">CALENDARIO DE GP</string>
+    <string name="siguienteCarrera">SIGUIENTE CARRERA</string>
 </resources>
