Chart Pilotos de cada Escudería e interfaz

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,4 +154,5 @@
     <string name="graficoPosSalidaFin">POSICIÓN SALIDA VS FINAL</string>
     <string name="CalendarioGP">CALENDARIO DE GP</string>
     <string name="siguienteCarrera">SIGUIENTE CARRERA</string>
+    <string name="pilotos">PILOTOS</string>
 </resources>
