23/11/2023 - David - Añadido video resumen de la carrera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,4 +155,6 @@
     <string name="CalendarioGP">CALENDARIO DE GP</string>
     <string name="siguienteCarrera">SIGUIENTE CARRERA</string>
     <string name="pilotos">PILOTOS</string>
+    <string name="momentos_carrera">RESUMEN</string>
+
 </resources>
