--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,6 @@
     <string name="seleccionarPiloto2">Segundo Piloto</string>
     <string name="buttonComparar">Comparar Pilotos</string>
     <string name="comparativaPilotos">COMPARATIVA</string>
+    <string name="estadisticasPiloto1">ESTADÍSTICAS PILOTO1</string>
+    <string name="estadisticasPiloto2">ESTADÍSTICAS PILOTO2</string>
 </resources>
